[package]
name = "bfcore"
version = "0.1.0"
authors = ["adam-mcdaniel <adam.mcdanie17@gmail.com>"]
edition = "2018"
categories = ["embedded", "no-std", "command-line-utilities", "development-tools::ffi"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "bfcore"
path = "src/bin.rs"


[dependencies]
