[package]
name = "bfcore"
version = "0.1.0"
authors = ["adam-mcdaniel <adam.mcdanie17@gmail.com>"]
edition = "2018"
categories = ["embedded", "no-std", "command-line-utilities", "development-tools::ffi"]
description = "An interpreter for BrainF*ck without std or alloc"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[example]]
name = "hello_world"
path = "examples/hello_world.rs"


[dependencies]
