[package]
name = "bfcore"
version = "0.2.0"
authors = ["adam-mcdaniel <adam.mcdanie17@gmail.com>"]
edition = "2018"
categories = ["embedded", "no-std", "command-line-utilities", "development-tools::ffi"]
description = "An interpreter for BrainF*ck without std or alloc"
license = "MIT"
repository = "https://github.com/adam-mcdaniel/bfcore"
homepage = "https://github.com/adam-mcdaniel/bfcore"
readme = "README.md"

[dependencies]

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[[example]]
name = "minimal"
path = "examples/minimal.rs"

[[example]]
name = "print"
path = "examples/print.rs"